# SignalandSystemBigHomework

./: .gitignore  EngineeringDesignAssignmentReport.aux  EngineeringDesignAssignmentReport.fdb_latexmk  EngineeringDesignAssignmentReport.fls  EngineeringDesignAssignmentReport.out  EngineeringDesignAssignmentReport.tex  EngineeringDesignAssignmentReport.toc  EngineeringDesignAssignmentReport.xdv  README.md
codes/Q1/: Cargo.toml  export_to_csv.sh
codes/Q1/output/: Q1_energy_distribution.csv  Q1_peaks.csv  Q1_results.txt  Q1_spectrum_full.csv  Q1_spectrum_lowfreq.csv  Q1_spectrum_midfreq.csv  Q1_summary.csv  Q1_waveform.csv
codes/Q1/src/: audio_reader.rs  export_csv.rs  fft_processor.rs  frequency_estimator.rs  main.rs  spectrum_visualizer.rs
codes/Q2/: Cargo.toml  butterworth_filter.rs
codes/Q2/output/: Q2_filter_coefficients.txt
codes/Q2/src/: filter_response.rs  main.rs  response_visualizer.rs  test_cutoff.rs
codes/Q3/output/: Q3_results.txt
codes/Q4/output/: Q4_comparison.txt  Q4_results.txt
codes/Q4/src/: comparator.rs  main.rs
